Use file extension as a hint for QImageReader

Fixes decoding PNG in weird situations.

BUG: 289819
FIXED-IN: 2.8.2